extends Control

func _on_level_1_pressed():
	get_tree().change_scene_to_file("res://levels/campaign/level_1.tscn")

func _on_level_2_pressed():
	get_tree().change_scene_to_file("res://levels/campaign/level_2.tscn")

func _on_level_3_pressed():
	pass # Replace with function body.

func _on_level_4_pressed():
	pass # Replace with function body.
